--- a/reservia.html
+++ b/reservia.html
@@ -27,8 +27,8 @@
             
             <nav id="header_nav">
                 <ul>
-                    <li class="header_ul_li ul_li_ancre"><a class="ul_li_a" href="#hebergement">Hébergement</a></li>
-                    <li class="header_ul_li ul_li_ancre"><a class="ul_li_a" href="#activités">Activités</a></li>
+                    <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="#">Hébergements</a></li>
+                    <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="#">Activités</a></li>
                     <li class="header_ul_li"><a class="ul_li_a" id="inscription" href="#">S'inscrire</a></li>
                 </ul>
             </nav>
@@ -126,7 +126,7 @@
                                     alt="Hôtel Le soleil du matin"
                                     class="img_aside">
                                 <div class="div_info_cards_aside">
-                                    <p class="info_cards_aside">Hôtel Le soleil du matin</p><p class="info_cards_aside"> Nuit à partir de 128€</p>
+                                    <p class="info_cards_aside"><span class="bold">Hôtel Le soleil du matin</span></p><p class="info_cards_aside tarifs"> Nuit à partir de 128<span class="bold">€</span></p>
                                     <!--Etoiles-->
                                     <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -145,7 +145,7 @@
                                     alt="Au coeur de l'eau Chambres d'hôtes"
                                     class="img_aside">
                                 <div class="div_info_cards_aside">
-                                    <p class="info_cards_aside">Au coeur de l'eau <br />Chambres d'hôtes </p><p class="info_cards_aside"> Nuit à partir de 71€</p> 
+                                    <p class="info_cards_aside"><span class="bold">Au coeur de l'eau <br />Chambres d'hôtes</span> </p><p class="info_cards_aside tarifs"> Nuit à partir de 71<span class="bold">€</span></p> 
                                     <!--Etoiles-->
                                     <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -164,7 +164,7 @@
                                     alt="Hôtel Tout bleu et Blanc"
                                     class="img_aside">
                                 <div class="div_info_cards_aside">
-                                    <p class="info_cards_aside">Hôtel Tout bleu et Blanc</p><p class="info_cards_aside">Nuit à partir de 68€</p> 
+                                    <p class="info_cards_aside"><span class="bold">Hôtel Tout bleu et Blanc</span></p><p class="info_cards_aside tarifs">Nuit à partir de 68<span class="bold">€</span></p> 
                                     <!--Etoiles-->
                                     <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -195,7 +195,7 @@
                                 <img src="images/hebergements/4_small/Auberge la Cannebière.jpg"
                                     alt="Auberge La Cannebière"
                                     class="img_article">
-                                <p class="info_cards_article">Auberge La Cannebière </p><p class="info_cards_article">Nuit à partir de 25€</p> 
+                                <p class="info_cards_article"><span class="bold">Auberge La Cannebière</span> </p><p class="info_cards_article tarifs">Nuit à partir de <span class="bold">25€</span></p> 
                                 <!--Etoiles-->
                                 <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -211,7 +211,7 @@
                                 <img src="images/hebergements/4_small/Hôtel du port.jpg"
                                     alt="Hôtel du port"
                                     class="img_article">
-                                <p class="info_cards_article">Hôtel du port </p><p class="info_cards_article">Nuit à partir de 52€</p> 
+                                <p class="info_cards_article"><span class="bold">Hôtel du port</span> </p><p class="info_cards_article tarifs">Nuit à partir de 52<span class="bold">€</span></p> 
                                 <!--Etoiles-->
                                 <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -227,7 +227,7 @@
                                 <img src="images/hebergements/4_small/Hôtel Les mouettes.jpg"
                                     alt="Hôtel Les mouettes"
                                     class="img_article">
-                                <p class="info_cards_article">Hôtel Les mouettes </p><p class="info_cards_article">Nuit à partir de 76€</p> 
+                                <p class="info_cards_article"><span class="bold">Hôtel Les mouettes</span> </p><p class="info_cards_article tarifs">Nuit à partir de 76<span class="bold">€</span></p> 
                                 <!--Etoiles-->
                                 <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -243,7 +243,7 @@
                                 <img src="images/hebergements/4_small/Hôtel de la mer.jpg"
                                     alt="Hôtel de la mer"
                                     class="img_article">
-                                <p class="info_cards_article">Hôtel de la mer </p><p class="info_cards_article">Nuit à partir de 46€</p>
+                                <p class="info_cards_article"><span class="bold">Hôtel de la mer</span> </p><p class="info_cards_article tarifs">Nuit à partir de 46<span class="bold">€</span></p>
                                 <!--Etoiles-->
                                 <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -259,7 +259,7 @@
                                 <img src="images/hebergements/4_small/Auberge Le Panier.jpg"
                                     alt="Auberge Le Panier"
                                     class="img_article">
-                                <p class="info_cards_article">Auberge Le Panier </p><p class="info_cards_article">Nuit à partir de 23€</p> 
+                                <p class="info_cards_article"><span class="bold">Auberge Le Panier</span> </p><p class="info_cards_article tarifs">Nuit à partir de <span class="bold">23€</span></p> 
                                 <!--Etoiles-->
                                 <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -275,7 +275,7 @@
                                 <img src="images/hebergements/4_small/Hôtel chez Amina.jpg"
                                     alt="Hôtel chez Amina"
                                     class="img_article">
-                                <p class="info_cards_article">Hôtel chez Amina </p><p class="info_cards_article">Nuit à partir de 96€</p> 
+                                <p class="info_cards_article"><span class="bold">Hôtel chez Amina</span> </p><p class="info_cards_article tarifs">Nuit à partir de 96<span class="bold">€</span></p> 
                                 <!--Etoiles-->
                                 <div class="etoiles_art">
                                     <i class="fas fa-star etoile etoile_bleue"></i>
@@ -309,30 +309,36 @@
 
                         <!--Acti. Gd Format-->
                         <!--Vieux-Port-->
-                            <figure href="#" class="activites_figure act_vieuxport_calanques activite_gd_format">
-                                <img src="images/activites/4_small/Vieux Port.jpg"
-                                    alt="Vieux Port"
-                                    class="img_activites">
-                                <figcaption class="figcaption_activites">Vieux Port</figcaption>
+                            <figure class="activite_gd_format act_vieuxport_calanques">
+                                <a href="#" class="activites_a img_vieuxport_calanques">
+                                    <img src="images/activites/4_small/Vieux Port.jpg"
+                                        alt="Vieux Port"
+                                        class="img_activites">
+                                    <figcaption class="figcaption_activites"><span class="bold">Vieux Port</span></figcaption>
+                                </a>
                             </figure>
 
                         <!--2 Acti. Petit Formats-->
                         <div class="groupe_2activites">
 
                             <!--Fort Pomègues-->
-                                <figure href="#" class="activites_figure act_pomegues activites_petit_format">
-                                    <img src="images/activites/4_small/Fort de Pomègues.jpg"
-                                        alt="Fort de Pomègues"
-                                        class="img_activites fort_pomegues">
-                                    <figcaption class="figcaption_activites"> Fort de Pomègues</figcaption>
+                                <figure class="activites_petit_format">
+                                    <a href="#" class="activites_a act_pomegues">
+                                        <img src="images/activites/4_small/Fort de Pomègues.jpg"
+                                            alt="Fort de Pomègues"
+                                            class="img_activites fort_pomegues">
+                                        <figcaption class="figcaption_activites"><span class="bold">Fort de Pomègues</span></figcaption>
+                                    </a>    
                                 </figure>
 
                             <!--Frioul-->
-                                <figure href="#" class="activites_figure act_frioul activites_petit_format">
-                                    <img src="images/activites/4_small/Îles du Frioul.jpg"
-                                        alt="Îles du Frioul"
-                                        class="img_activites iles_frioul">
-                                    <figcaption class="figcaption_activites">Îles du Frioul</figcaption>
+                                <figure class="activites_petit_format">
+                                    <a href="#" class="activites_a act_frioul">
+                                        <img src="images/activites/4_small/Îles du Frioul.jpg"
+                                            alt="Îles du Frioul"
+                                            class="img_activites iles_frioul">
+                                        <figcaption class="figcaption_activites"><span class="bold">Îles du Frioul</span></figcaption>
+                                    </a>    
                                 </figure>
 
                         </div>    
@@ -344,31 +350,37 @@
 
                         <!--Acti. Gd Format-->
                         <!--Calanques-->
-                            <figure href="#" class="activites_figure act_vieuxport_calanques activite_gd_format">
-                                <img src="images/activites/4_small/Parc National des Calanques.jpg"
-                                    alt="Parc National des Calanques"
-                                    class="img_activites">
-                                <figcaption class="figcaption_activites">Parc National des Calanques</figcaption>
+                            <figure class="activite_gd_format act_vieuxport_calanques">
+                                <a href="#" class="activites_a img_vieuxport_calanques">
+                                    <img src="images/activites/4_small/Parc National des Calanques.jpg"
+                                        alt="Parc National des Calanques"
+                                        class="img_activites">
+                                    <figcaption class="figcaption_activites"><span class="bold">Parc National des Calanques</span></figcaption>
+                                </a>
                             </figure>
 
                         <!--2 Acti Petit Formats-->
                         <div class="groupe_2activites">
 
                             <!--Notre Dame de la Garde-->
-                                <figure href="#" class="activites_figure act_nddlg activites_petit_format">
-                                    <img src="images/activites/4_small/Notre-Dame-De-La-Garde.jpg"
-                                        alt="Notre-Dame-De-La-Garde"
-                                        class="img_activites nddlg">
-                                    <figcaption class="figcaption_activites">Notre-Dame-De-La-Garde</figcaption>
+                                <figure class="activites_petit_format">
+                                    <a href="#" class="activites_a act_nddlg">
+                                        <img src="images/activites/4_small/Notre-Dame-De-La-Garde.jpg"
+                                            alt="Notre-Dame-De-La-Garde"
+                                            class="img_activites nddlg">
+                                        <figcaption class="figcaption_activites"><span class="bold">Notre-Dame-De-La-Garde</span></figcaption>
+                                    </a>
                                 </figure>
                             
 
                             <!--Longchamp-->
-                                <figure href="#" class="activites_figure act_longchamp activites_petit_format">
-                                    <img src="images/activites/4_small/Parc Longchamp.jpg"
-                                        alt="Parc Longchamp"
-                                        class="img_activites longchamp">
-                                    <figcaption class="figcaption_activites">Parc Longchamp</figcaption>
+                                <figure class="activites_petit_format">
+                                    <a href="#" class="activites_a act_longchamp">
+                                        <img src="images/activites/4_small/Parc Longchamp.jpg"
+                                            alt="Parc Longchamp"
+                                            class="img_activites longchamp">
+                                        <figcaption class="figcaption_activites"><span class="bold">Parc Longchamp</span></figcaption>
+                                    </a>
                                 </figure>
 
                         </div>
