--- a/reservia.html
+++ b/reservia.html
@@ -28,7 +28,7 @@
             <nav id="header_nav">
                 <ul>
                     <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="#">Hébergements</a></li>
-                    <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="#">Activités</a></li>
+                    <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="# b">Activités</a></li>
                     <li class="header_ul_li"><a class="ul_li_a" id="inscription" href="#">S'inscrire</a></li>
                 </ul>
             </nav>
