--- a/reservia.html
+++ b/reservia.html
@@ -9,6 +9,8 @@
         <title>Reservia</title>
         <meta name="description" content="Reservia - Trouvez un hébergement pour des vacances de rêve. Hébergement et Activités personnalisés"/>
         <script src="https://kit.fontawesome.com/0573c664cc.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     </head>
 
 
@@ -115,9 +117,9 @@
                     
                     <!-- Aside -->
                     <aside id="pop">
-                        <span class="span_pop_h2"><h2 class="titre_pop">Les plus populaires</h2>
-                            <i class="fas fa-chart-line icon"></i>
-                        </span>
+                        <div class="div_pop_h2">
+                            <h2 class="titre_pop">Les plus populaires</h2><i class="fas fa-chart-line icon"></i>
+                        </div>
 
 
 
@@ -128,7 +130,7 @@
                                         alt="Hôtel Le soleil du matin"
                                         class="img_aside">
                                     <div class="div_info_cards_aside">
-                                        <p class="info_cards_aside"><span class="bold">Hôtel Le soleil du matin</span></p><p class="info_cards_aside tarifs"> Nuit à partir de 128<span class="bold">€</span></p>
+                                        <p class="info_cards_aside"><span class="bold">Hôtel Le soleil du matin</span><br /><span class="tarifs"> Nuit à partir de 128<span class="bold">€</span></span></p>
                                         <!--Etoiles-->
                                         <div class="etoiles_art">
                                         <i class="fas fa-star etoile etoile_bleue"></i>
@@ -147,7 +149,7 @@
                                         alt="Au coeur de l'eau Chambres d'hôtes"
                                         class="img_aside">
                                     <div class="div_info_cards_aside">
-                                        <p class="info_cards_aside"><span class="bold">Au coeur de l'eau <br />Chambres d'hôtes</span> </p><p class="info_cards_aside tarifs"> Nuit à partir de 71<span class="bold">€</span></p> 
+                                        <p class="info_cards_aside"><span class="bold">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="tarifs">Nuit à partir de 71<span class="bold">€</span></span></p> 
                                         <!--Etoiles-->
                                         <div class="etoiles_art">
                                         <i class="fas fa-star etoile etoile_bleue"></i>
@@ -166,7 +168,7 @@
                                         alt="Hôtel Tout bleu et Blanc"
                                         class="img_aside">
                                     <div class="div_info_cards_aside">
-                                        <p class="info_cards_aside"><span class="bold">Hôtel Tout bleu et Blanc</span></p><p class="info_cards_aside tarifs">Nuit à partir de 68<span class="bold">€</span></p> 
+                                        <p class="info_cards_aside"><span class="bold">Hôtel Tout bleu et Blanc</span><br /><span class="tarifs">Nuit à partir de 68<span class="bold">€</span></span></p> 
                                         <!--Etoiles-->
                                         <div class="etoiles_art">
                                         <i class="fas fa-star etoile etoile_bleue"></i>
@@ -197,14 +199,16 @@
                                     <img src="images/hebergements/4_small/Auberge la Cannebière.jpg"
                                         alt="Auberge La Cannebière"
                                         class="img_article">
-                                    <p class="info_cards_article"><span class="bold">Auberge La Cannebière</span> </p><p class="info_cards_article tarifs">Nuit à partir de <span class="bold">25€</span></p> 
-                                    <!--Etoiles-->
-                                    <div class="etoiles_art">
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_grise"></i>
+                                    <div class="div_info_cards_article">
+                                        <p class="info_cards_article"><span class="bold">Auberge La Cannebière</span><br /><span class="article_tarifs">Nuit à partir de <span class="bold">25€</span></span></p> 
+                                        <!--Etoiles-->
+                                        <div class="etoiles_art">
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_grise"></i>
+                                        </div>
                                     </div>
                                 </a>
 
@@ -213,14 +217,16 @@
                                     <img src="images/hebergements/4_small/Hôtel du port.jpg"
                                         alt="Hôtel du port"
                                         class="img_article">
-                                    <p class="info_cards_article"><span class="bold">Hôtel du port</span> </p><p class="info_cards_article tarifs">Nuit à partir de 52<span class="bold">€</span></p> 
-                                    <!--Etoiles-->
-                                    <div class="etoiles_art">
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <div class="div_info_cards_article">
+                                        <p class="info_cards_article"><span class="bold">Hôtel du port</span><br /><span class="article_tarifs">Nuit à partir de 52<span class="bold">€</span></span></p> 
+                                        <!--Etoiles-->
+                                        <div class="etoiles_art">
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                        </div>
                                     </div>
                                 </a>
 
@@ -229,14 +235,16 @@
                                     <img src="images/hebergements/4_small/Hôtel Les mouettes.jpg"
                                         alt="Hôtel Les mouettes"
                                         class="img_article">
-                                    <p class="info_cards_article"><span class="bold">Hôtel Les mouettes</span> </p><p class="info_cards_article tarifs">Nuit à partir de 76<span class="bold">€</span></p> 
-                                    <!--Etoiles-->
-                                    <div class="etoiles_art">
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_grise"></i>
+                                    <div class="div_info_cards_article">
+                                        <p class="info_cards_article"><span class="bold">Hôtel Les mouettes</span><br /><span class="article_tarifs">Nuit à partir de 76<span class="bold">€</span></span></p> 
+                                        <!--Etoiles-->
+                                        <div class="etoiles_art">
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_grise"></i>
+                                        </div>
                                     </div>
                                 </a>
 
@@ -245,14 +253,16 @@
                                     <img src="images/hebergements/4_small/Hôtel de la mer.jpg"
                                         alt="Hôtel de la mer"
                                         class="img_article">
-                                    <p class="info_cards_article"><span class="bold">Hôtel de la mer</span> </p><p class="info_cards_article tarifs">Nuit à partir de 46<span class="bold">€</span></p>
-                                    <!--Etoiles-->
-                                    <div class="etoiles_art">
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_grise"></i>
-                                        <i class="fas fa-star etoile etoile_grise"></i>
+                                    <div class="div_info_cards_article">
+                                        <p class="info_cards_article"><span class="bold">Hôtel de la mer</span><br /><span class="article_tarifs">Nuit à partir de 46<span class="bold">€</span></span></p>
+                                        <!--Etoiles-->
+                                        <div class="etoiles_art">
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_grise"></i>
+                                            <i class="fas fa-star etoile etoile_grise"></i>
+                                        </div>
                                     </div>
                                 </a>
 
@@ -261,14 +271,16 @@
                                     <img src="images/hebergements/4_small/Auberge Le Panier.jpg"
                                         alt="Auberge Le Panier"
                                         class="img_article">
-                                    <p class="info_cards_article"><span class="bold">Auberge Le Panier</span> </p><p class="info_cards_article tarifs">Nuit à partir de <span class="bold">23€</span></p> 
-                                    <!--Etoiles-->
-                                    <div class="etoiles_art">
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_grise"></i>
+                                    <div class="div_info_cards_article">
+                                        <p class="info_cards_article"><span class="bold">Auberge Le Panier</span><br /><span class="article_tarifs">Nuit à partir de <span class="bold">23€</span></span></p> 
+                                        <!--Etoiles-->
+                                        <div class="etoiles_art">
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_grise"></i>
+                                        </div>
                                     </div>
                                 </a>
 
@@ -277,19 +289,21 @@
                                     <img src="images/hebergements/4_small/Hôtel chez Amina.jpg"
                                         alt="Hôtel chez Amina"
                                         class="img_article">
-                                    <p class="info_cards_article"><span class="bold">Hôtel chez Amina</span> </p><p class="info_cards_article tarifs">Nuit à partir de 96<span class="bold">€</span></p> 
-                                    <!--Etoiles-->
-                                    <div class="etoiles_art">
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
-                                        <i class="fas fa-star etoile etoile_bleue"></i>
+                                    <div class="div_info_cards_article">
+                                        <p class="info_cards_article"><span class="bold">Hôtel chez Amina</span><br /><span class="article_tarifs">Nuit à partir de 96<span class="bold">€</span></span></p> 
+                                        <!--Etoiles-->
+                                        <div class="etoiles_art">
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                            <i class="fas fa-star etoile etoile_bleue"></i>
+                                        </div>
                                     </div>
                                 </a>
                         </div>
 
-                        <p><a class="article_a afficher_plus" href="#">Afficher plus</a></p>
+                        <div class="div_afficher_plus"><p><a class="article_a afficher_plus" href="#">Afficher plus</a></p></div>
 
                     </article>
                 </section>
@@ -301,7 +315,7 @@
 
                 <!--SECTION 3 - Activités-->
                 <section id="section_activités" class="section">
-                    <h3 class="titre_activites">Activités à Marseille</h3>
+                    <h2 class="titre_activites">Activités à Marseille</h2>
 
 
                     <div id="div_activites"> 
@@ -352,6 +366,8 @@
 
                             <!--Acti. Gd Format-->
                             <!--Calanques-->
+                            <div class="div_2e_gd_format">
+
                                 <figure class="activite_gd_format act_vieuxport_calanques">
                                     <a href="#" class="activites_a img_vieuxport_calanques">
                                         <img src="images/activites/4_small/Parc National des Calanques.jpg"
@@ -360,6 +376,8 @@
                                         <figcaption class="figcaption_activites"><span class="bold">Parc National des Calanques</span></figcaption>
                                     </a>
                                 </figure>
+
+                            </div>
 
                             <!--2 Acti Petit Formats-->
                             <div class="groupe_2activites">
@@ -408,20 +426,20 @@
                 <!--Div Footer -->
                 <div class="div_footer"> 
 
-                    <ul class="ul_footer"><h4 class="h4_footer">A propos</h4>
+                    <ul class="ul_footer"><h3 class="h3_footer">A propos</h3>
                         <li class="li_footer"><a href="#" class="ahref_footer">Fonctionnement du Site</a></li>
                         <li class="li_footer"><a href="#" class="ahref_footer">Conditions générales de vente</a></li>
                         <li class="li_footer"><a href="#" class="ahref_footer">Données et confidentialité</a></li>
                     </ul>
 
 
-                    <ul class="ul_footer"><h4 class="h4_footer">Nos hébergements</h4>
+                    <ul class="ul_footer"><h3 class="h3_footer">Nos hébergements</h3>
                         <li class="li_footer"><a href="#" class="ahref_footer">Charte qualité</a></li>
                         <li class="li_footer"><a href="#" class="ahref_footer">Soumettre votre hôtel</a></li>
                     </ul>
 
 
-                    <ul class="ul_footer"><h4 class="h4_footer">Assistance</h4>
+                    <ul class="ul_footer"><h3 class="h3_footer">Assistance</h3>
                         <li class="li_footer"><a href="#" class="ahref_footer">Centre d'aide</a></li>
                         <li class="li_footer"><a href="#" class="ahref_footer">Nous contacter</a></li>
                     </ul>
