--- a/reservia.html
+++ b/reservia.html
@@ -20,7 +20,7 @@
 <!--BODY-->
     <body id="body_page">
 
-        <div class="wrapper_body">
+        <div class="wrapper_body wrappers">
 
 
         <!--HEADER-->
@@ -68,7 +68,7 @@
 
                     <!--Choix Filtres-->
 
-                    <section id="filtres">
+                    <section class="filtres">
                         <h4 class="h4_filtres">Filtres</h4>
 
                         <div class="div_filtres">
@@ -314,11 +314,11 @@
 
 
                 <!--SECTION 3 - Activités-->
-                <section id="section_activités" class="section">
+                <section class="section_activités">
                     <h2 class="titre_activites">Activités à Marseille</h2>
 
 
-                    <div id="div_activites"> 
+                    <div class="div_activites"> 
 
                         <!--1er Groupe de 3 Activités-->
                         <div class="groupe_3act">
@@ -419,9 +419,9 @@
 
 
             <!--FOOTER-->
-        <footer id="footer" class="section">
+        <footer class="footer">
 
-            <div class="wrapper_footer">
+            <div class="wrapper_footer wrappers">
 
                 <!--Div Footer -->
                 <div class="div_footer"> 
