--- a/reservia.html
+++ b/reservia.html
@@ -112,18 +112,18 @@
 
 
                 <!-- SECTION 2 - Hébergement-->
-                <section id="section_hebergement" class="section">
+                <section class="section_hebergement">
                 
                     
                     <!-- Aside -->
-                    <aside id="pop">
+                    <aside class="pop">
                         <div class="div_pop_h2">
                             <h2 class="titre_pop">Les plus populaires</h2><i class="fas fa-chart-line icon"></i>
                         </div>
 
 
 
-                        <div id="div_aside">
+                        <div class="div_aside">
                             <!--Soleil du matin-->
                                 <a class="aside_a aside_cards" href="#">
                                     <img src="images/hebergements/4_small/Hôtel Le soleil du matin.jpg"
@@ -187,12 +187,12 @@
 
 
                     <!--Article-->
-                    <article id="hebergement"> 
+                    <article class="hebergement"> 
                         <h2 class="titre_article">Hébergements à Marseille</h2>
 
                         <!--CHOIX HEBERGEMENTS MARSEILLE--> 
 
-                        <div id="div_article">
+                        <div class="div_article">
 
                             <!--Cannebière-->
                                 <a class="article_a article_cards" href="#">
