responsive et amelioration css+html

--- a/reservia.html
+++ b/reservia.html
@@ -43,7 +43,7 @@
 
 
         <!--BLOC PAGE-->
-            <section id="bloc_page">
+            <section class="bloc_page">
 
 
                 <!--SECTION 1 - Séléction Villes/Filtres-->
