responsive activités, article, header

--- a/reservia.html
+++ b/reservia.html
@@ -3,15 +3,18 @@
 
 
 <!--HEAD-->
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="style_reservia.css"/>
-        <title>Reservia</title>
-        <meta name="description" content="Reservia - Trouvez un hébergement pour des vacances de rêve. Hébergement et Activités personnalisés"/>
-        <script src="https://kit.fontawesome.com/0573c664cc.js" crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style_reservia.css"/>
+    <title>Reservia</title>
+    <meta name="description" content="Reservia - Trouvez un hébergement pour des vacances de rêve. Hébergement et Activités personnalisés"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/0573c664cc.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+</head>
+
+
 
 
 
@@ -33,7 +36,7 @@
                     <ul>
                         <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="#">Hébergements</a></li>
                         <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="#">Activités</a></li>
-                        <li class="header_ul_li"><a class="ul_li_a bold" id="inscription" href="#">S'inscrire</a></li>
+                        <li class="header_ul_li ul_li_sinscrire"><a class="ul_li_a bold" id="inscription" href="#">S'inscrire</a></li>
                     </ul>
                 </nav>
             </header>
@@ -321,7 +324,7 @@
                     <div class="div_activites"> 
 
                         <!--1er Groupe de 3 Activités-->
-                        <div class="groupe_3act">
+                        <div class="groupe_3act groupe_3act_gauche">
 
                             <!--Acti. Gd Format-->
                             <!--Vieux-Port-->
@@ -362,7 +365,7 @@
 
 
                         <!-- 2e Groupe de 3 Activités-->
-                        <div class="groupe_3act">
+                        <div class="groupe_3act groupe_3act_droit">
 
                             <!--Acti. Gd Format-->
                             <!--Calanques-->
