responsive 680, boutton choix ville, header

--- a/reservia.html
+++ b/reservia.html
@@ -35,8 +35,8 @@
                 <div class="header_div">
                     <nav class="header_nav">
                         <ul class="header_ul">
-                            <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="#">Hébergements</a></li>
-                            <li class="header_ul_li ul_li_ancre"><a class="ul_li_a nav_a_hover" href="#">Activités</a></li>
+                            <li class="header_ul_li ul_li_ancre li_hebergements"><a class="ul_li_a nav_a_hover" href="#">Hébergements</a></li>
+                            <li class="header_ul_li ul_li_ancre li_activites"><a class="ul_li_a nav_a_hover" href="#">Activités</a></li>
                         </ul>
                     </nav>
 
@@ -70,7 +70,11 @@
                             <input type="search" name="selection_ville" id="selection_ville" placeholder="Marseille, France">
                         
                             <label id="label_recherche" for="recherche_ville"></label>
-                            <input type="submit" name="recherche_ville" id="recherche_ville" value="Rechercher"/>
+                            <input type="submit" name="recherche_ville" id="recherche_ville" class="submit_rechercher" value="Rechercher"/>
+                            <button type="button" name="recherche_ville" id="recherche_ville" class="boutton_rechercher" value="rechercher">
+                                <i class="fas fa-search">
+                                </i>
+                            </button>
                     </div>
 
 
