--- a/reservia.html
+++ b/reservia.html
@@ -37,12 +37,9 @@
                         <ul class="header_ul">
                             <li class="header_ul_li ul_li_ancre li_hebergements"><a class="ul_li_a nav_a_hover" href="#">Hébergements</a></li>
                             <li class="header_ul_li ul_li_ancre li_activites"><a class="ul_li_a nav_a_hover" href="#">Activités</a></li>
+                            <li class="header_ul_li ul_li_ancre sinscrire"><a class="inscription bold" href="#">S'inscrire</a></li>
                         </ul>
                     </nav>
-
-                    <p class="sinscrire">
-                        <a class="inscription bold" href="#">S'inscrire</a>
-                    </p>
                 </div>
 
             </header>
@@ -71,10 +68,10 @@
                         
                             <label id="label_recherche" for="recherche_ville"></label>
                             <input type="submit" name="recherche_ville" id="recherche_ville" class="submit_rechercher" value="Rechercher"/>
-                            <button type="button" name="recherche_ville" id="recherche_ville" class="boutton_rechercher" value="rechercher">
-                                <i class="fas fa-search">
-                                </i>
-                            </button>
+                            <span class="span_boutton"><button type="button" class="boutton_rechercher" value="rechercher">
+                                    <i class="fas fa-search">
+                                    </i>
+                                </button></span>
                     </div>
 
 
