--- a/reservia.html
+++ b/reservia.html
@@ -140,7 +140,7 @@
                                         alt="Hôtel Le soleil du matin"
                                         class="img_aside">
                                     <div class="div_info_cards_aside">
-                                        <p class="info_cards_aside"><span class="bold">Hôtel Le soleil du matin</span><br /><span class="tarifs"> Nuit à partir de 128<span class="bold">€</span></span></p>
+                                        <p class="info_cards_aside"><span class="bold titre_cards_aside">Hôtel Le soleil du matin</span><br /><span class="tarifs"> Nuit à partir de 128<span class="bold">€</span></span></p>
                                         <!--Etoiles-->
                                         <div class="etoiles_art">
                                         <i class="fas fa-star etoile etoile_bleue"></i>
@@ -159,7 +159,7 @@
                                         alt="Au coeur de l'eau Chambres d'hôtes"
                                         class="img_aside">
                                     <div class="div_info_cards_aside">
-                                        <p class="info_cards_aside"><span class="bold">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="tarifs">Nuit à partir de 71<span class="bold">€</span></span></p> 
+                                        <p class="info_cards_aside"><span class="bold titre_cards_aside">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="tarifs">Nuit à partir de 71<span class="bold">€</span></span></p> 
                                         <!--Etoiles-->
                                         <div class="etoiles_art">
                                         <i class="fas fa-star etoile etoile_bleue"></i>
@@ -178,7 +178,7 @@
                                         alt="Hôtel Tout bleu et Blanc"
                                         class="img_aside">
                                     <div class="div_info_cards_aside">
-                                        <p class="info_cards_aside"><span class="bold">Hôtel Tout bleu et Blanc</span><br /><span class="tarifs">Nuit à partir de 68<span class="bold">€</span></span></p> 
+                                        <p class="info_cards_aside"><span class="bold titre_cards_aside">Hôtel Tout bleu et Blanc</span><br /><span class="tarifs">Nuit à partir de 68<span class="bold">€</span></span></p> 
                                         <!--Etoiles-->
                                         <div class="etoiles_art">
                                         <i class="fas fa-star etoile etoile_bleue"></i>
