--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <!-- Aside -->
                     <aside class="pop">
                         <div class="div_pop_h2">
-                            <h2 class="titre_pop">Les plus populaires</h2><i class="fas fa-chart-line icon"></i>
+                            <h2 id="hebergement" class="titre_pop">Les plus populaires</h2><i class="fas fa-chart-line icon"></i>
                         </div>
 
 
@@ -198,7 +198,7 @@
 
                     <!--Article-->
                     <article class="hebergement"> 
-                        <h2 id="hebergement" class="titre_article">Hébergements à Marseille</h2>
+                        <h2 class="titre_article">Hébergements à Marseille</h2>
 
                         <!--CHOIX HEBERGEMENTS MARSEILLE--> 
 
